--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
     "nx": "nx",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
     "lint": "nx workspace-lint && ng lint",
-    "e2e": "ng e2e",
+    "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
@@ -21,15 +20,12 @@
     "format": "nx format:write",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
-    "update": "ng update @nrwl/workspace",
-    "update:check": "ng update",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help"
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "8.11.1",
     "@angular/animations": "^8.2.0",
     "@angular/common": "^8.2.0",
     "@angular/compiler": "^8.2.0",
@@ -38,38 +34,67 @@
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
     "@angular/router": "^8.2.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1",
+    "@apollo/react-components": "^3.1.3",
+    "@apollo/react-hoc": "^3.1.3",
+    "@apollo/react-hooks": "^3.1.3",
     "@nestjs/common": "^6.8.3",
     "@nestjs/core": "^6.8.3",
+    "@nestjs/graphql": "^6.5.3",
     "@nestjs/platform-express": "^6.8.3",
-    "reflect-metadata": "^0.1.13"
+    "@nrwl/angular": "8.11.1",
+    "apollo-angular": "^1.8.0",
+    "apollo-angular-link-http": "^1.9.0",
+    "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.0",
+    "apollo-client": "^2.6.0",
+    "apollo-link": "^1.2.11",
+    "apollo-server-express": "^2.9.16",
+    "core-js": "^2.5.4",
+    "document-register-element": "1.13.1",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.0",
+    "graphql-tools": "^4.0.6",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "~6.4.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.803.14",
     "@angular/cli": "8.3.14",
-    "@nrwl/workspace": "8.11.1",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.5.3",
-    "prettier": "1.18.2",
-    "@nrwl/nest": "8.11.1",
     "@angular/compiler-cli": "^8.2.0",
     "@angular/language-service": "^8.2.0",
-    "@angular-devkit/build-angular": "^0.803.14",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "7.0.0",
-    "@nrwl/jest": "8.11.1",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
-    "cypress": "3.6.1",
-    "@nrwl/cypress": "8.11.1",
-    "@nrwl/node": "8.11.1",
+    "@babel/preset-react": "7.7.4",
+    "@graphql-codegen/cli": "^1.11.2",
+    "@graphql-codegen/typescript": "^1.11.2",
+    "@graphql-codegen/typescript-apollo-angular": "^1.11.2",
+    "@graphql-codegen/typescript-operations": "^1.11.2",
+    "@graphql-codegen/typescript-react-apollo": "^1.11.2",
     "@nestjs/schematics": "^6.7.0",
-    "@nestjs/testing": "^6.8.3"
+    "@nestjs/testing": "^6.8.3",
+    "@nrwl/cypress": "8.11.1",
+    "@nrwl/jest": "8.11.1",
+    "@nrwl/nest": "8.11.1",
+    "@nrwl/node": "8.11.1",
+    "@nrwl/react": "8.11.1",
+    "@nrwl/web": "8.11.1",
+    "@nrwl/workspace": "8.11.1",
+    "@testing-library/react": "9.4.0",
+    "@types/jest": "24.0.9",
+    "@types/node": "~8.9.4",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.4",
+    "codelyzer": "~5.0.1",
+    "cypress": "3.6.1",
+    "dotenv": "6.2.0",
+    "eslint": "6.1.0",
+    "jest": "24.1.0",
+    "jest-preset-angular": "7.0.0",
+    "prettier": "1.18.2",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.5.3"
   }
 }
